--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,18 @@ body
     background: lightgreen;
     font-family: Arial, Helvetica, sans-serif;
 }
+.assignment
+{
+    Display:flex;
+    Padding:10px;
+    margin:10px;
+    background:lightblue;
+}
+.assignment img
+{
+    width:200px;
+    padding:10px;
+}
 h1
 {
     color: maroon;
