--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body
 {
-    background: lightgreen;
+    background: #085f63;
     font-family: Arial, Helvetica, sans-serif;
 }
 .assignment
@@ -8,15 +8,22 @@ body
     Display:flex;
     Padding:10px;
     margin:10px;
-    background:lightblue;
+    background: #49BEB7;
+    border-radius: 10px;
 }
 .assignment img
 {
     width:200px;
-    padding:10px;
+    margin: 10px;
+    border: 2px solid #FACF5A;
 }
 h1
 {
-    color: maroon;
+    color:  #ff5959;
     text-align: center;
+}
+a
+{
+    text-decoration:none;
+    color: #FACF5A;
 }
