--- a/styles.css
+++ b/styles.css
@@ -3,27 +3,40 @@ body
     background: #085f63;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.assignments
+{
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .assignment
 {
-    Display:flex;
-    Padding:10px;
-    margin:10px;
+    width: 20%;
+    Padding: 20px 15px;
+    margin: 10px;
     background: #49BEB7;
     border-radius: 10px;
 }
 .assignment img
 {
-    width:200px;
+    width: 200px;
     margin: 10px;
     border: 2px solid #FACF5A;
+    display: block;
+    margin: auto;
 }
 h1
 {
-    color:  #ff5959;
+    color: #ff5959;
     text-align: center;
 }
 a
 {
     text-decoration:none;
     color: #FACF5A;
+}
+.assignment h2
+{
+    text-align: center;
 }
